test/expected/explain_fuw3_v.out
explain void f(unsigned x : 3)
               ^
16: error: parameters can not have bit-field widths
